@@ -1,6 +1,8 @@
 Release 1.0.7 (in development)
 ==============================
 
+* Fix a traceback when removing files with globbed toctrees.
+
 * If an autodoc object cannot be imported, always re-read the
   document containing the directive on next build.
 
